updated overlay for broadcaster and sizing issue due to being a bit too small

--- a/Neon.Obs.BrowserSource.WebApp/wwwroot/css/site.css
+++ b/Neon.Obs.BrowserSource.WebApp/wwwroot/css/site.css
@@ -1,43 +1,5 @@
 html {
-    font-size: 14px;
-}
-
-@media (min-width: 768px) {
-    html {
-        font-size: 16px;
-    }
-}
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-html {
+    font-size: 32px;
     position: relative;
     min-height: 100%;
-}
-
-.form-floating > .form-control-plaintext::placeholder, .form-floating > .form-control::placeholder {
-    color: var(--bs-secondary-color);
-    text-align: end;
-}
-
-.form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
-    text-align: start;
-}
-
-.chatapp {
-    display: flex;
-    height: 250px;
-    width: 300px;
-    overflow: hidden;
-    flex-direction: column;
-    justify-content: end;
-}
-
-.twitch-message {
-    margin-left: 0.25rem;
-    color: #eef3ff;
-    font-size: inherit;
-    font-family: inherit;
 }
